--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
     "react-use-measure": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.9",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
@@ -72,7 +73,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5"
   }
 }
