--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
         - DATABASE_URL=${DATABASE_URL}
     image: menu-app:0.1
     pull_policy: always
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     environment:
       - DATABASE_URL=${DATABASE_URL}
       
